Fix contrast ratio issue and update README.md file to satisfy project requirements

--- a/style.css
+++ b/style.css
@@ -353,7 +353,7 @@ footer {
   padding: 0.75rem 2rem;
   justify-self: start;
   color: var(--var-secondary-1);
-  background-color: var(--var-primary-3);
+  background-color: var(--var-primary-1);
   border: none;
 }
 
